# conda-pytorch

./: .gitignore  Makefile  README.md  environment-full.yaml  environment-hist.yaml  pyproject.toml
misc/: jupyter_server_config_local.json
notebooks/: .gitignore  embeddings2.ipynb  gan-convolution.ipynb  gan-sample-digits.ipynb  gan-sample-sinusoid.ipynb
notebooks/mine/batchnorm/: Makefile  model.ipynb
notebooks/mine/misc/: embeddings1.ipynb  gan-convolution.ipynb  gan-sample-digits.ipynb  lighting.ipynb
notebooks/mine/simple/: test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test5.ipynb  test6.ipynb
